# hz-ab-testing

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
data/: ab_assignments.csv  carts.csv  customers.csv  engagement_events.csv  names.json  products.csv
scripts/: generate_data.py  generate_emails.py  segment_and_assign.py
src/hz_ab_testing/: __init__.py  agentic.py  assign.py  catalog.py  cli.py  config.py  context.py  emails.py  emails_cli.py  generate.py  llm.py  models.py  phase2_cli.py  segment.py
tests/: test_assign.py  test_emails.py  test_generate.py  test_segment.py
