[project]
name = "hz-ab-testing"
version = "0.1.0"
description = "Hazel A/B email testing demo — data generation, segmentation, and variant assignment"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "pandas>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
generate-data = "hz_ab_testing.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
